# skypro_online_store

./: .env.example  .gitignore  pyproject.toml
article/: models.py  views.py
article/migrations/: 0001_initial.py
article/templates/: article_confirm_delete.html  article_create.html  article_detail.html  article_list.html
catalog/: admin.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contact_us.html  product_detail.html  product_list.html
catalog/templatetags/: image_tags.py
skypro_online_store/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_country.py
users/templates/: login.html  password_reset.html  register.html
